# Notion-Parsing-and-Context-Extraction

./: .gitignore  README.md  __init__.py  benchmark.py  file_handlers.py  parser.py  pyproject.toml  requirements.txt  run_parser.py
ai_documents/: ai_documents_02f3af2c55a94051a3f33a90ac82c546.json  ai_documents_0bd582c8524d4a03b66f7e4bcd1808db.json  ai_documents_26643c686ebf802f9c43eedec800f2cb.json  ai_documents_26643c686ebf80989932c7384d36d9ac.json  ai_documents_26843c686ebf80638aedea570b7c7ab6.json  ai_documents_7625c138da9848839198b42b04793f5d.json  ai_documents_85f440755ccf4ff68872f78e4133f904.json  ai_documents_a578b79d74a6409fa66acd3968af3318.json
files/: submission.csv
parsed_outputs/: parsed_output_02f3af2c55a94051a3f33a90ac82c546.json  parsed_output_0bd582c8524d4a03b66f7e4bcd1808db.json  parsed_output_26643c686ebf802f9c43eedec800f2cb.json  parsed_output_26643c686ebf80989932c7384d36d9ac.json  parsed_output_26843c686ebf80638aedea570b7c7ab6.json  parsed_output_26843c686ebf807e8eebf7d66d0b3bfe.json  parsed_output_7625c138da9848839198b42b04793f5d.json  parsed_output_85f440755ccf4ff68872f78e4133f904.json  parsed_output_a578b79d74a6409fa66acd3968af3318.json
