[tool.poetry]
name = "notion-parsing-and-context-extraction"
version = "1.0.0"
description = "A scalable Notion document parser with OCR, PDF support, benchmarking, and AI-ready output."
authors = ["Rishikesh63 <your-email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
notion-client = "^2.0.0"
langchain = "*"
pandas = "*"
pdfplumber = "*"
Pillow = ">=9.0.0"
tqdm = "*"
requests = ">=2.28.0"
pytesseract = ">=0.3"
PyPDF2 = "*"
python-dotenv = "*"
psutil = "*"
pydantic = "1.10.13"
pypdf = "^6.0.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
